--- a/package.json
+++ b/package.json
@@ -27,10 +27,16 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.52.3",
+    "@material-ui/core": "^4.12.4",
+    "axios": "^0.27.2",
     "core-js": "^3.9.1",
     "es6-promise": "^4.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
