--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "jsx": "react",
+    "strict": true,
     "module": "CommonJS",
     "moduleResolution": "node",
     "noImplicitReturns": true,
